Fix hosted app crash when started in tablet mode

The code was written with the expectation that
HostedAppButtonContainer::StartTitlebarAnimation()
is called before
HostedAppButtonContainer::OnImmersiveRevealStarted().

This is not the case when in tablet mode and results
in crashes.

This CL updates HostedAppButtonContainer to allow these
methods to be called in either order.

Bug: 836482
Change-Id: I658578ca79599e21566fffd3986a6dc852cb6489
Reviewed-on: https://chromium-review.googlesource.com/1029882
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556327}
Former-commit-id: cdd1046247720cc268f3fe8ad1ca57066b9fbd93