chrome/browser/ui/views/frame/browser_non_client_frame_view_ash.h
@@ -43,6 +43,10 @@ class BrowserNonClientFrameViewAsh
       public ash::mojom::SplitViewObserver,
       public aura::WindowObserver {
  public:
+  // How long to delay the hosted app origin text animation from starting.
+  static constexpr base::TimeDelta kTitlebarAnimationDelay =
+      base::TimeDelta::FromMilliseconds(750);
+
   BrowserNonClientFrameViewAsh(BrowserFrame* frame, BrowserView* browser_view);
   ~BrowserNonClientFrameViewAsh() override;
 
@@ -132,10 +136,11 @@ class BrowserNonClientFrameViewAsh
   FRIEND_TEST_ALL_PREFIXES(BrowserNonClientFrameViewAshTest,
                            RestoreMinimizedBrowserUpdatesCaption);
   FRIEND_TEST_ALL_PREFIXES(ImmersiveModeControllerAshHostedAppBrowserTest,
-                           FrameLayout);
+                           FrameLayoutToggleTabletMode);
 
-  friend class HostedAppNonClientFrameViewAshTest;
   friend class BrowserFrameHeaderAsh;
+  friend class HostedAppNonClientFrameViewAshTest;
+  friend class ImmersiveModeControllerAshHostedAppBrowserTest;
 
   // Distance between the right edge of the NonClientFrameView and the tab
   // strip.
